[gd_scene load_steps=13 format=2]

[ext_resource path="res://ScoreTab/Score.gd" type="Script" id=1]
[ext_resource path="res://Menu/_fondV1.jpg" type="Texture" id=2]
[ext_resource path="res://ui/SovietProgram-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Menu/Xolonium-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/SovietProgram.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Menu/button.png" type="Texture" id=6]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 78
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=5]
size = 64
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=6]
size = 40
font_data = ExtResource( 5 )

[node name="Score" type="Control"]
margin_right = 619.0
margin_bottom = 1083.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 609.0
margin_bottom = 1078.0
texture = ExtResource( 2 )

[node name="ScoreCount" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -220.5
margin_top = 278.211
margin_right = 147.5
margin_bottom = 429.211
custom_fonts/font = SubResource( 1 )
text = "0 %"
align = 1
valign = 2

[node name="Label" type="Label" parent="ScoreCount"]
margin_left = 331.951
margin_top = -27.8951
margin_right = 490.951
margin_bottom = 153.105
custom_fonts/font = SubResource( 2 )
text = "%"

[node name="YourScore" type="Label" parent="."]
margin_left = 16.7896
margin_top = 102.948
margin_right = 598.79
margin_bottom = 181.948
custom_fonts/font = SubResource( 3 )
text = "YOUR SCORE:"

[node name="Tween" type="Tween" parent="."]

[node name="Play" type="TextureButton" parent="."]
margin_left = 83.6315
margin_top = 611.0
margin_right = 578.631
margin_bottom = 737.0
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="Play"]
margin_top = -2.78955
margin_right = 456.0
margin_bottom = 111.21
custom_fonts/font = SubResource( 4 )
text = "Play Again"
align = 1
valign = 1

[node name="Menu" type="TextureButton" parent="."]
margin_left = 75.4735
margin_top = 803.211
margin_right = 598.474
margin_bottom = 948.211
texture_normal = ExtResource( 6 )

[node name="Label" type="Label" parent="Menu"]
margin_left = 3.0
margin_top = -2.78955
margin_right = 445.0
margin_bottom = 108.21
custom_fonts/font = SubResource( 5 )
text = "MENU"
align = 1
valign = 1

[node name="Popup" type="Popup" parent="."]
visible = true
margin_left = 17.0
margin_top = 421.0
margin_right = 608.0
margin_bottom = 581.0

[node name="NUL" type="Label" parent="Popup"]
margin_left = -377.389
margin_top = -4.83038
margin_right = 593.611
margin_bottom = 121.17
custom_fonts/font = SubResource( 6 )
text = "                       YOU DIDN'T BRING ENOUGH 
					                         GOODS TO YOUR CLIENT
	                                 ( YOU SUCK )."
[connection signal="pressed" from="Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
